finalize fixes and cleanup